Uploaded image for project: 'Kudu'
  1. Kudu
  2. KUDU-1551

kudu-tserver can not start up after experience node crash

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Resolved
    • Critical
    • Resolution: Fixed
    • 1.0.1
    • 1.2.0
    • log

    Description

      after experience node crash ,kudu-tserver can not restarted successfully,
      Fatal log :
      "I0804 18:36:04.109537 1909 log_util.cc:359] Successfully rebuilt footer for segment: /export/servers/kudu/tserver_wal_data_7052/wals/2c329cd1b4bf4850b9b9e2e0613f73d9.recovery/wal-000000001 (valid entries through byte offset 1993)
      I0804 18:36:04.109566 1909 tablet.cc:854] T 2c329cd1b4bf4850b9b9e2e0613f73d9 Rewinding schema during bootstrap to Schema [

      ]
      F0804 18:36:04.109634 1909 memrowset.cc:102] Check failed: schema.has_column_ids()"

      Attachments

        Issue Links

          Activity

            People

              tlipcon Todd Lipcon
              bruceSz zhangsong
              Votes:
              0 Vote for this issue
              Watchers:
              2 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved: