KUDU-1551. Ignore log segments which were preallocated but have no header.

This fixes a TS startup crash in the case that it finds a log segment
which is preallocated but has no valid magic or header at the start.

The new test injects such a crash and verifies that the server can
restart and replay its logs.

Change-Id: I843cf483b93823cbcc5506958f62cbb076569ca8
Reviewed-on: http://gerrit.cloudera.org:8080/5276
Reviewed-by: Adar Dembo <adar@cloudera.com>
Tested-by: Kudu Jenkins